[package]
name = "actionkv"
version = "0.1.0"
authors = ["Nick Calibey <nick.calibey@gmail.com>"]
edition = "2018"

[dependencies]
binecode = "1.0"
# The byteorder crate extends many Rust types with extra traits that enable
# them to be written to disk and read back into a program in a repeatable,
# easy-to-use way.
byteorder = "1.2"
# The crc crate provides the checksum functionality that we want to include.
crc = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

# A [lib] section of Cargo.toml is used to define your own name for the library
# that you're building. A crate may only have one library.
[lib]
name = "libactionkv"
path = "src/lib.rs"

# A [[bin]] section - of which there may be many - of Cargo.toml defines an
# executable file that will be built from this crate. The double-square
# bracket syntax ([[]]) is required because it unambiguously describes bin
# as being part of 1 or more elements.
[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_disk.rs"
